Thu Nov 25 08:19:39 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * NEWS:
          Removed unnecessary text.

        * connectors/dds4ccm/impl/DDS_Base_Connector_T.h:
        * connectors/dds4ccm/impl/DDS_Base_Connector_T.cpp:
        * connectors/dds4ccm/impl/DDS_TopicBase_Connector_T.h:
        * connectors/dds4ccm/impl/DDS_TopicBase_Connector_T.cpp:
        * connectors/dds4ccm/tests/MultiTopic/Connector/MultiTopic_Connector_T.cpp:
          Moved all helper methods from TopicBase to Base. That way, an user
          can also derive his/her classes from Base.

Wed Nov 24 15:17:55 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/DDS_Subscriber_Base_T.cpp:
        * connectors/dds4ccm/impl/DDS_TopicBase_Connector_T.h:
        * connectors/dds4ccm/impl/DDS_TopicBase_Connector_T.cpp:
          Rewritter init, activate, passivate and remove methods. They should
          be re-usable in the derived classes.

        * connectors/dds4ccm/tests/MultiTopic/Connector/MultiTopic_Connector_T.h:
        * connectors/dds4ccm/tests/MultiTopic/Connector/MultiTopic_Connector_T.cpp:
        * connectors/dds4ccm/tests/MultiTopic/Receiver/MultiTopic_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/MultiTopic/Sender/MultiTopic_Sender_exec.cpp:
          Re-used the init, activate, passivate and remove methods from TopicBase.

Wed Nov 24 15:04:18 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/idl/ccm_dds.idl:
        * connectors/dds4ccm/idl/dds4ccm_Entity.idl:
        * connectors/dds4ccm/idl/dds4ccm_stub.mpc:
          Moved DDS_Entity to its own file

Wed Nov 24 14:50:32 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/idl:
        * connectors/dds4ccm/idl/dds4ccm_stub.mpc:
          Compile ccm_dds.idl as part of the build

        * connectors/dds4ccm/idl/ccm_ddsC.h:
        * connectors/dds4ccm/idl/ccm_ddsS.h:
          Removed these files, now generated as part of the build